--- a/lien.html
+++ b/lien.html
@@ -9,5 +9,8 @@
         <a href="page_tuto_ht..html" target="f2"><li>Tuto HTML</li></a>
         <a href="page_tuto_CSS.html" target="f2"><li>Tuto CSS</li></a>
         <a href="html formulaire.html" target="f2"><li>Mon Formulaire</li></a>
+        <a href="tableau.html" target="f2"><li>Exercice tableau</li></a>
+        <a href="tableaudrapeau.html" target="f2"><li>Tableau drapeau</li></a>
+</body>
 </body>
 </html>
