--- a/liencsshtml.html
+++ b/liencsshtml.html
@@ -6,7 +6,7 @@
 <body bg color="white">
    Liens: <br>
    <a href="TP_texte_css.html" target="f2"><li>Le crack de Sintra</li></a>
-        <a href="TP-8_CSS.html" target="f2"><li>Mise en forme de boîte</li></a>
+        <a href="TP1-8_CSS.html" target="f2"><li>Mise en forme de boîte</li></a>
         <a href="TP2-8_CSS.html" target="f2"><li>bloc</li></a>
     </body>
 </body>
