--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
             <li class="menu-mission"><a href="#">Mission</a>
             <ul class="submenu">
-            <li><a href="cv.html">CV</a></li>
+            <li><a href="cv.html">CV</a>TP5</li>
            <li><a href="#">Compte-rendu </a></li>
          
            </ul>
