--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
        <li class="menu-html"><a href="#">HTML & CSS</a>
          <ul class="submenu">
            <li><a href="siteiframe.html">Cours HTML et CSS</a></li>
-           <li><a href="#">Elements HTML</a></li>
-           <li><a href="#">Attributs HTML</a></li>
+           <li><a href="#">Tableau 1</a></li>
+           <li><a href="#">Tableau 2</a></li>
            <li><a href="#">Exercices</a></li>
           </ul>
          </li>
