--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
          <ul class="submenu">
            <li><a href="siteiframe.html">Cours HTML et CSS</a></li>
            <li><a href="tableau.html">Tableau 1</a></li>
-           <li><a href="#">Tableau 2</a></li>
+           <li><a href="tableaudrapeau.html">Tableau 2</a></li>
            <li><a href="#">Exercices</a></li>
           </ul>
          </li>
