--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
            <li><a href="siteiframe.html">Cours HTML et CSS</a></li>
            <li><a href="tableau.html">Tableau 1</a></li>
            <li><a href="tableaudrapeau.html">Tableau 2</a></li>
-           <li><a href="#">Exercices</a></li>
+           <li><a href="liencsshtml.html">Exercices HTML % CSS</a></li>
           </ul>
          </li>
        
