--- a/liencsshtml.html
+++ b/liencsshtml.html
@@ -5,9 +5,11 @@
 </head>
 <body bg color="white">
    Liens: <br>
-   <a href="TP texte css.html" target="f2"><li>Le crack de Sintra</li></a>
-        <a href="TP1-8 CSS.html" target="f2"><li>Mise en forme de boîte</li></a>
-        <a href="TP2-8 CSS.html" target="f2"><li>bloc</li></a>
+	
+        <a href="TP1-8 CSS.html" target="f2"><li>T1</li></a>
+        <a href="TP2-8 CSS.html" target="f2"><li>T2</li></a>
+	<a href="TP texte css.html" target="f2"><li>TP3</li></a>
+	<a href="tpcss.html" target="f2"><li>T4</li></a>
         <a href="cv.html" target="f2"><li>TP5</li></a>
     </body>
 </body>
