--- a/liencsshtml.html
+++ b/liencsshtml.html
@@ -6,11 +6,12 @@
 <body bg color="white">
    Liens: <br>
 	
-        <a href="TP1-8 CSS.html" target="f2"><li>T1</li></a>
-        <a href="TP2-8 CSS.html" target="f2"><li>T2</li></a>
+        <a href="TP1-8 CSS.html" target="f2"><li>TP1</li></a>
+        <a href="TP2-8 CSS.html" target="f2"><li>TP2</li></a>
 	<a href="TP texte css.html" target="f2"><li>TP3</li></a>
-	<a href="tpcss.html" target="f2"><li>T4</li></a>
+	<a href="tpcss.html" target="f2"><li>TP4</li></a>
         <a href="cv.html" target="f2"><li>TP5</li></a>
+	 <a href="TP6.html" target="f2"><li>TP6</li></a>
     </body>
 </body>
 </html>
