--- a/liencsshtml.html
+++ b/liencsshtml.html
@@ -12,6 +12,7 @@
 	<a href="tpcss.html" target="f2"><li>TP4</li></a>
         <a href="cv.html" target="f2"><li>TP5</li></a>
 	 <a href="TP6.html" target="f2"><li>TP6</li></a>
+	<a href="TP7.html" target="f2"><li>TP7</li></a>
     </body>
 </body>
 </html>
