--- a/TP7.html
+++ b/TP7.html
@@ -10,11 +10,11 @@
 <body>
     <div id="menu">
         <ul class="niveau1">
-            <li><a href="#">menu 1</a></li>
+            <li><a href="#">Menu 1</a></li>
             <li class="sousmenu"><a href="#">menu 2</a>
                 <ul class="niveau2">
-                    <li><a href="#">Sous menu 2.1</a></li>
-                    <li><a href="#">Sous menu 2.2</a></li>
+                    <li><a href="#">Sous Menu 2.1</a></li>
+                    <li><a href="#">Sous Menu 2.2</a></li>
                 </ul>
             </li>
             <li><a href="#">Menu 3</a></li>
@@ -30,7 +30,7 @@
                 <li><a href="#">Sous menu 4.2</a></li>
             </ul>
             </li>
-            <li><a href="#">menu 5</a></li>
+            <li><a href="#">Menu 5</a></li>
         </ul>
         
     </li>
