--- a/index.html
+++ b/index.html
@@ -46,6 +46,6 @@
            <li class="menu-contact"><a href ="#">Contact</a></li>
            </ul>
            </nav>        
-	<h1> MOINDJIE Ibrahim BTS SIO1</h1>
+	<center><h1> MOINDJIE Ibrahim BTS SIO1</h1></center>
 </body>
 </html>
