--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta chsarset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="menu-deroulant-responsive.css">
+	<img src="psg.gif">
 	
 	
 </head>
