--- a/index.html
+++ b/index.html
@@ -49,6 +49,6 @@
            <li class="menu-contact"><a href ="#">Contact</a></li>
            </ul>
            </nav>        
-	<br><center><h1> Portfolio MOINDJIE Ibrahim BTS SIO</h1></center>
+	<br><div><h1> Portfolio MOINDJIE Ibrahim BTS SIO</h1></div>
 </body>
 </html>
