--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
        
          <li class="menu-js"><a href="#">Javascript</a>
             <ul class="submenu">
-            <li><a href="#">Cours Javascript</a></li>
+            <li><a href="tp1.html">TP1</a></li>
            <li><a href="#">Fonctions JavaScript</a></li>
            <li><a href="#">Le DOM</a></li>
            <li><a href="#">Exercices</a></li>
