--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
          <li class="menu-js"><a href="#">Javascript</a>
             <ul class="submenu">
             <li><a href="tp1.html">TP1</a></li>
-           <li><a href="#">Fonctions JavaScript</a></li>
+           <li><a href="tp2.html">Fonctions TP2</a></li>
            <li><a href="#">Le DOM</a></li>
            <li><a href="#">Exercices</a></li>
            </ul>
