--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <ul class="submenu">
             <li><a href="tp1.html">TP1</a></li>
            <li><a href="tp2.html">Fonctions TP2</a></li>
-           <li><a href="#">Le DOM</a></li>
+           <li><a href="tp3.html">Le DOM</a></li>
            <li><a href="#">Exercices</a></li>
            </ul>
            </li> 
