--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
            </ul>
            </li>
 	    
-	    li class="menu-mission"><a href="#">SQL</a>
+	    li class="menu-SQL"><a href="#">SQL</a>
             <ul class="submenu">
             <li><a href="agence_location22023.sql>Location de voiture TP1</a></li>
            <li><a href="#"></a></li>
