--- a/index.html
+++ b/index.html
@@ -43,8 +43,11 @@
 	    
 	    li class="menu-SQL"><a href="#">SQL</a>
             <ul class="submenu">
-            <li><a href="agence_location22023.sql>Location de voiture TP1</a></li>
-           <li><a href="#"></a></li>
+            <li><a href="location.html>Location de voiture TP1</a></li>
+	 <li><a href="">TP2</a></li>
+            <li><a href="">TP3</a></li>
+            <li><a href="#">TP4</a></li>
+           <li><a href="#"> TP5</a></li>
          
            </ul>
            </li> 
