--- a/index.html
+++ b/index.html
@@ -61,6 +61,6 @@
            <li class="menu-contact"><a href ="#">Contact</a></li>
            </ul>
            </nav>        
-	<br><div><h1> Portfolio MOINDJIE Ibrahim BTS SIO</h1></div>
+	<center><div><h1> Portfolio MOINDJIE Ibrahim BTS SIO</h1></div><center>
 </body>
 </html>
