--- a/location.html
+++ b/location.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <div class="container">
-        <a href="ressource/SQLDoc.docx">
+        <a href="sql.ibrahim.docx">
             <div class="sectionLeft">Questionnaire</div>
         </a>
-        <a href="ressource/agence_location2023.sql">
+        <a href="agence_location2023.sql">
             <div class="sectionRight">Fichiers SQL</div>
         </a>
     </div>
