--- a/location.html
+++ b/location.html
@@ -17,7 +17,7 @@
         </a>
     </div>
     <div class="container">
-        <img src="img/Capture.PNG" alt="">
+        <img src="location.image.PNG" alt="">
     </div>
 </body>
 </html>
