--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
            </ul>
            </li>
 	    
-	    li class="menu-SQL"><a href="#">SQL</a>
+	    <li class="menu-SQL"><a href="#">SQL</a>
             <ul class="submenu">
-            <li><a href="location.html>Location de voiture TP1</a></li>
+            <li><a href="location.html">Location de voiture TP1</a></li>
 	 <li><a href="">TP2</a></li>
             <li><a href="">TP3</a></li>
             <li><a href="#">TP4</a></li>
