--- a/location.html
+++ b/location.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <a href="sql.ibrahim.docx">
-            <div class="sectionLeft">Questionnaire</div>
+            <div class="sectionLeft">Questionnaire SQL</div>
         </a>
         <a href="agence_location2023.sql">
             <div class="sectionRight">Fichiers SQL</div>
