--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	    
 	    <li class="menu-SQL"><a href="#">SQL</a>
             <ul class="submenu">
-            <li><a href="location.html">Location de voiture TP1</a></li>
+            <li><a href="location.html">TP1</a></li>
 	 <li><a href="">TP2</a></li>
             <li><a href="">TP3</a></li>
             <li><a href="#">TP4</a></li>
