--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <ul class="submenu">
             <li><a href="location.html">TP1</a></li>
 	 <li><a href="">TP2</a></li>
-            <li><a href="">TP3</a></li>
+            <li><a href="requete.html">TP3</a></li>
             <li><a href="#">TP4</a></li>
            <li><a href="#"> TP5</a></li>
          
