--- a/requete.html
+++ b/requete.html
@@ -10,10 +10,10 @@
 <body>
     <div class="container">
         <a href="ibrahim.rhbase">
-            <div class="sectionLeft">Questionnaire SQL</div>
+            <div class="sectionLeft">Questionnaire requete SQL</div>
         </a>
         <a href="requeterh">
-            <div class="sectionRight">Fichiers SQL</div>
+            <div class="sectionRight">Fichiers requete SQL</div>
         </a>
     </div>
     <div class="container">
