--- a/requete.html
+++ b/requete.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <div class="container">
-        <a href="ibrahim.rhbase">
+        <a href="ibrahim.rhbase.docx">
             <div class="sectionLeft">Questionnaire requete SQL</div>
         </a>
-        <a href="requeterh">
+        <a href="requterh">
             <div class="sectionRight">Fichiers requete SQL</div>
         </a>
     </div>
