--- a/requete.html
+++ b/requete.html
@@ -12,7 +12,7 @@
         <a href="ibrahim.rhbase.docx">
             <div class="sectionLeft">Questionnaire requete SQL</div>
         </a>
-        <a href="requterh">
+        <a href="requterh.sql">
             <div class="sectionRight">Fichiers requete SQL</div>
         </a>
     </div>
