--- a/requete.html
+++ b/requete.html
@@ -17,7 +17,7 @@
         </a>
     </div>
     <div class="container">
-        <img src="sql.ibrahimimg" alt="">
+        <img src="sql.ibrahimimg.PNG"" alt="">
     </div>
 </body>
 </html>
