--- a/lien.html
+++ b/lien.html
@@ -6,13 +6,13 @@
 	<br>
 	<hr>
        <h2> Bienvenue sur mon site web</h2>
-		<h1>Acceuil></h1>
+		<h1>Accueil></h1>
 		<p>
 	<b>MOINDJIE Ibrahim</b>
-				</p>
+	</p>
 	</center>
 </head>
-<body bg color="white">
+<body bg color="aquablue">
    Liens: <br>
         <a href="page_etablissement.html" target="f2"><li>Nom établissemnt</li></a>
         <a href="page_tuto_ht..html" target="f2"><li>Tuto HTML</li></a>
