--- a/lien.html
+++ b/lien.html
@@ -6,7 +6,7 @@
 	<br>
 	<hr>
        <h2> Bienvenue sur mon site web</h2>
-		<h1>Accueil></h1>
+		<h1>Accueil</h1>
 		<p>
 	<b>MOINDJIE Ibrahim</b>
 	</p>
