--- a/iframe page.html
+++ b/iframe page.html
@@ -6,6 +6,7 @@
 	<body>
 		<iframe src="lien.html" width="30%" height="800px" name="f1"></iframe>
 		<iframe src="page2.html" width="60%" height="800px" name="f2"></iframe>
+		<iframe src="imagehtml.jpg" width="30%" height="400px" name="f2"></iframe>
 	</body>	
 </html>
 
