--- a/lien.html
+++ b/lien.html
@@ -5,10 +5,10 @@
 	<center>
 	<br>
 	<hr>
-       <h2> Bienvenue sur mon site web</h2>
-		<h1>Accueil</h1>
+		<h2> <center>Bienvenue sur mon site web </center></h2>
+		<h1><center>Accueil </center></h1>
 		<p>
-	<b>MOINDJIE Ibrahim</b>
+	<b> <center> MOINDJIE Ibrahim </center></b>
 	</p>
 	</center>
 </head>
