--- a/page2.html
+++ b/page2.html
@@ -2,6 +2,15 @@
 <html>
 <head>
 	<title></title>
+	<center>
+	<br>
+	<hr>
+		<h2> <center>Bienvenue sur mon site web </center></h2>
+		<h1><center>Accueil </center></h1>
+		<p>
+	<b> <center> MOINDJIE Ibrahim </center></b>
+	</p>
+	</center>
 </head>
 <body>
      <font color="red">
