--- a/page2.html
+++ b/page2.html
@@ -2,10 +2,13 @@
 <html>
 <head>
 	<title></title>
+	<body bgcolor="red">
+   
+
 	<center>
 	<br>
 	<hr>
-		<font color="red">
+		
       
 		<h2> <center>Bienvenue sur mon site web </center></h2>
 		<h1><center>Accueil </center></h1>
