--- a/lien.html
+++ b/lien.html
@@ -4,7 +4,7 @@
 	<title></title>
 	
 </head>
-<body bg color="aquablue">
+<body bg color="yellow">
    Liens: <br>
         <a href="page_etablissement.html" target="f2"><li>Nom établissemnt</li></a>
         <a href="page_tuto_ht..html" target="f2"><li>Tuto HTML</li></a>
