--- a/page_etablissement.html
+++ b/page_etablissement.html
@@ -3,7 +3,7 @@
 <head>
 	<title></title>
 </head>
-<body bgcolor="pink">
+<body bgcolor="blue">
       <font color="purple">
         <marquee behavior="alternate" bgcolor="red" scrollamount="3">
            <img src="imagehtml.jpg" width="80px" height="80px">
