--- a/page_tuto_CSS.html
+++ b/page_tuto_CSS.html
@@ -3,10 +3,10 @@
 <head>
 	<title></title>
 </head>
-<body bgcolor="pink">
+<body bgcolor="yellow">
     <font color="purple">
     
-    <marquee behavior="alternate" bgcolor= "red" scrollamount="3">
+    <marquee behavior="alternate" bgcolor= "orange" scrollamount="3">
          <img src="imagehtml.jpg" width="80px" height="80px">
 
          </marquee>
