--- a/page_tuto_ht..html
+++ b/page_tuto_ht..html
@@ -3,8 +3,8 @@
 <head>
 	<title></title>
 </head>
-<body bgcolor="pink">
-    <font color="purple">
+<body bgcolor="#81DAF5">
+    <font color="#0101DF">
     <marquee behavior="alternate" bgcolor= "red" scrollamount="3">
          <img src="imagehtml.jpg" width="80px" height="80px">
 
