--- a/page_tuto_ht.hml.html
+++ b/page_tuto_ht.hml.html
@@ -3,10 +3,10 @@
 <head>
 	<title></title>
 </head>
-<body bgcolor="pink">
-    <font color="purple">
+<body bgcolor="aquablue">
+    <font color="green">
     
-    <marquee behavior="alternate" bgcolor= "red" scrollamount="3">
+    <marquee behavior="alternate" bgcolor= "yellow" scrollamount="3">
          <img src="imagehtml.jpg" width="80px" height="80px">
 
          </marquee>
