--- a/page_etablissement.html
+++ b/page_etablissement.html
@@ -5,7 +5,7 @@
 </head>
 <body bgcolor="blue">
       <font color="purple">
-        <marquee behavior="alternate" bgcolor="red" scrollamount="3">
+        <marquee behavior="alternate" bgcolor="black" scrollamount="3">
            <img src="imagehtml.jpg" width="80px" height="80px">
            </marquee>
 
